tests/rosetta/out/Dart/md5.dart
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:49Z

class testpkg {
  static int Add(int a, int b) => a + b;
  static const double Pi = 3.14;
  static const int Answer = 42;
}

void main() {
  for (var pair in [['d41d8cd98f00b204e9800998ecf8427e', ''], ['0cc175b9c0f1b6a831c399e269772661', 'a'], ['900150983cd24fb0d6963f7d28e17f72', 'abc'], ['f96b697d7cb7938d525a2f31aaf161d0', 'message digest'], ['c3fcd3d76192e4007dfb496cca67e13b', 'abcdefghijklmnopqrstuvwxyz'], ['d174ab98d277d9f5a5611c2c9f419d9f', 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'], ['57edf4a22be3c955ac49da2e2107b67a', '12345678901234567890' + '123456789012345678901234567890123456789012345678901234567890'], ['e38ca1d920c4b8b8d3946b2c72f01680', 'The quick brown fox jumped over the lazy dog\'s back']]) {
    var sum = testpkg['MD5Hex'](pair[1]);
    if (sum != pair[0]) {
      print('MD5 fail');
      print(['  for string,', pair[1]].join(' '));
      print(['  expected:  ', pair[0]].join(' '));
      print(['  got:       ', sum].join(' '));
    }
  }
}

bool _equal(dynamic a, dynamic b) {
    if (a is List && b is List) {
        if (a.length != b.length) return false;
        for (var i = 0; i < a.length; i++) { if (!_equal(a[i], b[i])) return false; }
        return true;
    }
    if (a is Map && b is Map) {
        if (a.length != b.length) return false;
        for (var k in a.keys) { if (!b.containsKey(k) || !_equal(a[k], b[k])) return false; }
        return true;
    }
    return a == b;
}

String _formatDuration(Duration d) {
    if (d.inMicroseconds < 1000) return '${d.inMicroseconds}µs';
    if (d.inMilliseconds < 1000) return '${d.inMilliseconds}ms';
    return '${(d.inMilliseconds/1000).toStringAsFixed(2)}s';
}

void _json(dynamic v) {
    print(jsonEncode(v));
}


dynamic _min(dynamic v) {
    List<dynamic>? list;
    if (v is List) list = v;
    else if (v is Map && v['items'] is List) list = (v['items'] as List);
    else if (v is Map && v['Items'] is List) list = (v['Items'] as List);
    else { try { var it = (v as dynamic).items; if (it is List) list = it; } catch (_) {} }
    if (list == null || list.isEmpty) return 0;
    var m = list[0];
    for (var n in list) { if ((n as Comparable).compareTo(m) < 0) m = n; }
    return m;
}

num _sum(dynamic v) {
    Iterable<dynamic>? list;
    if (v is Iterable) list = v;
    else if (v is Map && v['items'] is Iterable) list = (v['items'] as Iterable);
    else if (v is Map && v['Items'] is Iterable) list = (v['Items'] as Iterable);
    else { try { var it = (v as dynamic).items; if (it is Iterable) list = it; } catch (_) {} }
    if (list == null) return 0;
    num s = 0;
    for (var n in list) s += (n as num);
    return s;
}

bool _runTest(String name, void Function() f) {
    stdout.write('   test $name ...');
    var start = DateTime.now();
    try {
        f();
        var d = DateTime.now().difference(start);
        stdout.writeln(' ok (${_formatDuration(d)})');
        return true;
    } catch (e) {
        var d = DateTime.now().difference(start);
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        return false;
    }
}
